--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "author": "Shunsuke Urita",
   "description": "yasasi buta san",
   "dependencies": {
-    "axios": "^0.18.0",
-    "hubot": "^3.2.0",
+    "axios": "^0.18.1",
+    "cron": "^1.7.1",
+    "hubot": "^3.3.2",
     "hubot-diagnostics": "1.0.0",
     "hubot-google-images": "^0.2.7",
     "hubot-google-translate": "^0.2.1",
@@ -18,7 +19,7 @@
     "hubot-rules": "^1.0.0",
     "hubot-scripts": "^2.17.2",
     "hubot-shipit": "^0.2.1",
-    "hubot-slack": "^4.6.0"
+    "hubot-slack": "^4.7.1"
   },
   "engines": {
     "node": "0.10.x"
@@ -31,7 +32,7 @@
   },
   "devDependencies": {
     "lodash.find": "^4.6.0",
-    "serve": "^10.1.1",
+    "serve": "^10.1.2",
     "xml2json": "^0.11.2"
   }
 }
